seo: add meta tag description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
+    <meta
+      name="description"
+      content="Discover the latest fashion trends at AdminShop. Shop stylish, high-quality clothing for men, women, and kids. Free shipping on orders over $50. Shop now!"
+    />
+    <link rel="icon" href="/favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
